# faisca-rs

./: .gitmodules  .tokeignore  Cargo.toml  README.md  TODO.md
app_example/: Cargo.toml
app_example/src/: lib.rs
examples/: info.rs
faisca-rs/: Cargo.toml
faisca-rs/src/: ffi.rs  lib.rs  renderer.rs
faisca-rs/src/renderer/: buffer.rs  mod.rs  queue.rs  resources.rs  swapchain_info.rs  utypes.rs  vertex.rs
faisca-rs/src/renderer/spir_v/: example_fragment_shader.spv  example_vertex_shader.spv.vert
faisca-rs/src/util/: mod.rs  on_drop_defer.rs
module/window/: window.cpp
window/: CMakeLists.txt  window.cpp
window/include/: app.hpp  defines.hpp  dylib.hpp
window/src/: app.cpp  dylib_load.cpp  window.cpp
window/src/dylib_load_platform/: dylib_load_windows.cpp
