[package]
name = "faisca"
version = "0.1.0"
edition = "2021"

[[example]]
name = "info"
path = "examples/info.rs"

[lib]
name = "faisca"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
ash = "0.37"
cfg-if = "1"
log = "0.4"
thiserror = "1.0"

[dev-dependencies]
env_logger = "0.10"